<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>nl-HAN-ORFFApp</groupId>
    <artifactId>ORFFApp</artifactId>
    <version>1.0-SNAPSHOT</version>
    <build>

        <plugins>
            <plugin>

                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.biojava</groupId>
            <artifactId>biojava3-core</artifactId>
            <version>3.0</version>
        </dependency>
        <!-- This imports the latest version of BioJava genomics module -->
        <dependency>

            <groupId>org.biojava</groupId>
            <artifactId>biojava-genome</artifactId>
            <version>4.2.0</version>
            <!-- note: the genomics module depends on the BioJava-core module and will import it automatically -->
        </dependency>


        <!-- other biojava jars as needed -->


        <!-- This imports the latest version of BioJava structure module -->
        <dependency>

            <groupId>org.biojava</groupId>
            <artifactId>biojava-structure</artifactId>
            <version>4.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.biojava</groupId>
            <artifactId>biojava-ws</artifactId>
            <version>5.3.0</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>biojava-maven-repo</id>
            <name>BioJava repository</name>
            <url>http://www.biojava.org/download/maven/</url>
        </repository>
    </repositories>

</project>